# demand-radar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.context/: goal.md  lessons.md  milestones.md  session_prompts.md  workflow.md
.github/ISSUE_TEMPLATE/: demand_radar_task.md
.github/workflows/: ci.yml
data/: watchlist.csv
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  PRODUCT_SPEC.md  TASKS.md  TESTING.md
src/demand_radar/: brief.py  cli.py  collector.py  config.py  db.py  extractors.py  filters.py  html_report.py  llm_classifier.py  models.py  opportunities.py  reddit_client.py  reports.py  scoring.py  v1_brief_seed.py  watchlist.py
src/demand_radar/backends/: __init__.py  base.py  praw_backend.py  public_json.py
tests/: test_brief.py  test_collect_watchlist.py  test_extractors.py  test_filters.py  test_html_report.py  test_llm_classifier.py  test_opportunities.py  test_public_json_backend.py  test_scoring.py  test_v1_brief.py
tests/fixtures/: m3_eyeball.json
