[project]
name = "demand-radar"
version = "0.1.0"
description = "Local Reddit ETL for SaaS opportunity discovery"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pandas>=2.2.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
demand-radar = "demand_radar.cli:app"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
